# screen

./: .gitignore  README.md
.github/workflows/: check-standard-py.yaml  check-standard.yaml  test-coverage-py.yaml  test-coverage.yaml
python/: MANIFEST.in  NEWS.md  README.md  pyproject.toml  requirements.txt  screen.py
python/screen/: __init__.py  screen.py
python/screen/data/: errors.csv  filters.csv  sector.csv
python/tests/: test_screen.py
python/yfscreen/: __init__.py  screen.py
python/yfscreen/data/: categoryname.csv  region.csv
python/yscreen/: __init__.py  screen.py
python/yscreen/data/: exchange.csv  fundfamilyname.csv  industry.csv
r/: DESCRIPTION  NAMESPACE  README.md  screen.Rproj
r/.Rproj.user/98D66F85/pcs/: files-pane.pper  windowlayoutstate.pper
r/.github/workflows/: check-standard.yaml  test-coverage.yaml
r/R/: screen.R
r/data/: data_categoryname.rda  data_errors.rda  data_exchange.rda  data_filters.rda  data_fundfamilyname.rda  data_industry.rda  data_peer_group.rda  data_region.rda  data_sector.rda
r/data-raw/: data.R  errors.csv  filters.csv  peer_group.csv
r/man/: create_payload.Rd  create_query.Rd  data_categoryname.Rd  data_errors.Rd  data_exchange.Rd  data_filters.Rd  data_fundfamilyname.Rd  data_industry.Rd  data_peer_group.Rd  data_region.Rd  data_sector.Rd  get_crumb_and_cookies.Rd  get_data.Rd  get_screen.Rd  get_session.Rd  screenr-package.Rd  yfscreen-package.Rd  yscreen-package.Rd
r/tests/: testthat.R
r/tests/testthat/: test-screen.R
