[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel" ]

[project]
name = "yfscreen"
version = "0.1.3"
description = """\
  Simple and efficient access to Yahoo Finance's 'screener' API <https://finance.yahoo.com/research-hub/screener/> for \
  querying and retrieving financial data.\
  """
readme = "README.md"
keywords = [ "data", "equities", "etfs", "finance", "futures", "indices", "mutual funds", "screener", "yahoo" ]
license = { text = "GPL-2.0-or-later" }
authors = [ { name = "Jason Foster", email = "jason.j.foster@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business :: Financial",
]
dependencies = [ "pandas>=1", "requests>=2.2" ]
urls.Documentation = "https://github.com/jasonjfoster/screen/tree/main/python#readme"
urls.Homepage = "https://github.com/jasonjfoster/screen"
urls.Issues = "https://github.com/jasonjfoster/screen/issues"
urls.Source = "https://github.com/jasonjfoster/screen/tree/main/python"

[tool.setuptools]
package-data.yfscreen = [ "data/*.csv" ]
